--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,11 +3,11 @@ hyperskill_project:
   ide_files: https://cogniterra.org/media/attachments/lesson/32445/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: "Wed, 03 Jul 2024 21:29:19 UTC"
+update_date: "Thu, 04 Jul 2024 20:15:43 UTC"
 stages:
   - id: 2281
     step: 35304
-    is_completed: false
+    is_completed: true
   - id: 2282
     step: 35305
     is_completed: false
