--- a/Battleship with Java/Place all ships/task-info.yaml
+++ b/Battleship with Java/Place all ships/task-info.yaml
@@ -41,8 +41,5 @@ files:
     is_binary: true
     learner_created: true
 feedback_link: https://hyperskill.org/learn/step/35305#comment
-status: Unchecked
-feedback:
-  message: Local check isn't available
-  time: "Tue, 09 Jul 2024 12:21:07 UTC"
+status: Failed
 record: 2
